Color field update
Additional animations, color picker changes

--- a/privacy.html
+++ b/privacy.html
@@ -5,24 +5,99 @@
   <title>Privacy Policy</title>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>Effective Date: April 7, 2025</p>
+    <p>Effective: 4/9/25</p>
+    <ol>
+        <li>Information We Collect</li>
 
-  <p>This Privacy Policy explains how we handle information when you use our site at <strong>tool.yourdomain.com</strong>. This site does not collect personal information, use cookies, or track you across the web.</p>
+        At this time, Nodeflow does not collect or store any personal information from users who visit or interact with our Website. We do not use cookies, tracking scripts, or any other mechanisms to monitor, profile, or log your behavior on our site.
 
-  <h2>1. Information We Collect</h2>
-  <p>We do not collect any personally identifiable information (PII) when you use this tool. No forms, logins, or data storage are involved at this time.</p>
+        However, our infrastructure is powered by Cloudflare, which provides hosting, analytics, and security services. As a result, Cloudflare may collect limited information when you visit the Website, including but not limited to:
 
-  <h2>2. Cookies and Tracking</h2>
-  <p>We do not use any cookies, third-party trackers, or analytics services. If that changes (e.g. Google Analytics, AdSense), this policy will be updated and a consent banner will be added as required by law.</p>
+        IP address
 
-  <h2>3. Third-Party Links</h2>
-  <p>This site may link to third-party websites. We are not responsible for the privacy practices or content of those sites.</p>
+        Browser type and version
 
-  <h2>4. Changes to This Policy</h2>
-  <p>We may update this policy in the future. If we do, we’ll post the revised version with a new effective date.</p>
+        Device and operating system details
 
-  <h2>5. Contact</h2>
-  <p>If you have any questions about this Privacy Policy, you can reach us at <a href="mailto:spira@nodeflow.net">you@yourdomain.com</a>.</p>
+        Date and time of access
+
+        Pages visited
+
+        Referring URLs
+
+        This data is used by Cloudflare for legitimate operational purposes such as traffic routing, load balancing, performance optimization, threat detection, and analytics.
+
+        Cloudflare acts as a data processor in this context and their data handling practices are governed by their own Privacy Policy.
+        <li> Use of Your Information</li>
+
+        Nodeflow does not collect, store, or use your personal data. Since all hosting and analytic functionality is handled by Cloudflare, any information collected through your interaction with the Website is used solely by Cloudflare for:
+
+        Monitoring and improving network performance
+
+        Preventing abuse, security threats, and DDoS attacks
+
+        Analyzing traffic patterns and usage metrics
+
+        Ensuring availability and uptime of our Services
+
+        We do not have direct access to raw analytics or personal identifiers collected by Cloudflare, nor do we aggregate or attempt to re-identify any such data.
+        <li> Sharing of Information</li>
+
+        Since Nodeflow does not collect or store any user data, we do not sell, rent, or share your personal information with any third parties.
+
+        Cloudflare may share data it collects with third parties only under certain conditions, such as to comply with legal obligations, or with service providers who are contractually obligated to protect the data. Please refer to Cloudflare’s policies for full details.
+        <li> Data Retention</li>
+
+        Nodeflow retains no user data, personally identifiable information, or tracking logs.
+
+        Cloudflare may retain certain logs and analytics data as part of its normal operations. The retention duration is determined by Cloudflare’s internal policies and applicable legal requirements.
+        <li> Data Transfers and Jurisdiction</li>
+
+        Cloudflare operates a globally distributed network of servers. As such, information processed by Cloudflare may be transferred to and stored on servers located outside of your jurisdiction, including in countries that may not have the same data protection laws as your home country.
+
+        By using our Website, you acknowledge and agree that your data may be transferred, processed, and stored by Cloudflare in accordance with their global infrastructure and legal obligations.
+        <li> Your Rights Under GDPR and Other Laws</li>
+
+        While Nodeflow does not process or store any of your personal data directly, you still have rights under the General Data Protection Regulation (GDPR) and similar laws in other jurisdictions.
+
+        If you believe your data has been collected by Cloudflare and you wish to exercise your rights of access, correction, erasure, or objection, we encourage you to contact Cloudflare directly or review their Data Subject Rights Request process.
+
+        You may also contact us via the details provided below, and we will assist to the extent possible.
+        <li> Security</li>
+
+        We take your privacy seriously and make every effort to ensure your information is protected. While we do not process personal data ourselves, we rely on Cloudflare's industry-standard security measures to secure our website from unauthorized access, attacks, and data breaches.
+
+        These include:
+
+        HTTPS encryption across all endpoints
+
+        DDoS mitigation and Web Application Firewall (WAF)
+
+        Real-time threat intelligence updates
+
+        However, no system can be 100% secure. You acknowledge that you use the Website at your own risk.
+
+        <li>
+            Third-Party Links
+        </li>
+        Our Website may contain links to third-party websites or services that are not operated or controlled by Nodeflow. We are not responsible for the content, privacy practices, or data handling policies of these third-party services. We strongly advise you to review the privacy policies of any external sites you visit.
+
+        <li>Changes to This Policy</li>
+
+        We may update this Policy from time to time to reflect changes in our legal obligations or the services we use (such as Cloudflare). Any updates will be posted to this page with a revised "Effective Date." Your continued use of the Website constitutes acceptance of the revised Policy.
+        BY ACCESSING OR USING OUR WEBSITE, YOU AGREE TO THIS PRIVACY POLICY AND TERMS OF USE. IF YOU DO NOT AGREE, PLEASE DO NOT ACCESS THE SITE.
+
+        <li> Contact</li>
+
+        If you have any questions or concerns about this Privacy Policy or our data practices, you may contact us at:
+        <br />
+        Nodeflow
+        <br />
+        Email: spira@nodeflow.net
+        <br />
+        Website: https://gradtool.nodeflow.net
+
+    </ol>
+
 </body>
 </html>
