--- a/terms.html
+++ b/terms.html
@@ -26,6 +26,6 @@
   <p>We reserve the right to modify these terms at any time. Continued use of the site after changes are posted means you accept the updated terms.</p>
 
   <h2>6. Contact</h2>
-  <p>For any questions regarding these Terms, contact <a href="mailto:spira@nodeflow.net">you@yourdomain.com</a>.</p>
+  <p>For any questions regarding these Terms, contact <a href="mailto:spira@nodeflow.net">spira@nodeflow.net</a>.</p>
 </body>
 </html>
